# tpm-tools

./: .gitignore  CMakeLists.txt  configure.in
debian/: changelog  control  copyright  libtpm-unseal-dev.install  libtpm-unseal1.symbols  rules  tpm-tools.install  watch
debian/patches/: 02-cflags-errors-unused.patch  series
src/cmds/: tpm_sealdata.c
src/tpm_mgmt/: tpm_nvwrite.c  tpm_present.c
